Fix: KINJO misalignment on card

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -69,6 +69,7 @@ $nannycode: url('/src/assets/nanny-code.jpg?url');
             $kinjo;
             background-position: center;
             background-repeat: no-repeat;
+            background-size: 120%;
         }
 
         &--2 {
